Fix browse cards being to big on smalls screens

--- a/starwarswiki/src/style/style.scss
+++ b/starwarswiki/src/style/style.scss
@@ -85,7 +85,7 @@ main {
 
 .browse-page {
 	> * {
-		width: 400px;
+		width: min(100%, 400px);
 
 		img {
 			height: 200px;
